--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "test-svelte-form",
 	"version": "0.0.1",
 	"type": "module",
+	"engines": {
+		"node": ">=18 <21"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
